Center align the password strength in Sign up form and fix mobile UI of signup (#752)

--- a/src/components/Auth/SignUp/SignUp.css
+++ b/src/components/Auth/SignUp/SignUp.css
@@ -137,6 +137,7 @@
 
 .PasswordClassName { 
   margin: auto;
+  text-align: center;
   display: table;
  }
 
